--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Sat Jun 01 20:15:53 EDT 2013
-app.grails.version=2.2.2
+#Wed Feb 25 00:48:47 EST 2015
+app.grails.version=2.4.4
 app.name=paris
 app.version=0.1
 plugins.rest=0.7
